update multiple files

--- a/develop/css/main.scss
+++ b/develop/css/main.scss
@@ -14,3 +14,6 @@
 @import "sass/pages/home";
 // components
 @import "sass/components/global/buttons";
+@import "sass/components/home-page/header";
+@import "sass/components/home-page/keypad";
+@import "sass/components/home-page/keys";
