--- a/develop/index.pug
+++ b/develop/index.pug
@@ -1,5 +1,5 @@
 doctype
-html(dir=dir)
+html(dir=dir,data-theme=1)
   head
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
@@ -11,13 +11,33 @@ html(dir=dir)
       href="../images/favicon-32x32.png"
     )
     title Calculator App
-    //- Main Template CSS File
     link(rel="stylesheet", href="css/main.css")
-    //- Google Fonts
     link(rel="preconnect", href="https://fonts.googleapis.com")
     link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
-    link(rel="stylesheet", id="font-url" href="")
+    link(rel="stylesheet", id="font-url" href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&display=swap")
   body
     main
-    //- Main Template js File
+      header
+        h1 calc
+        div
+          span theme
+          .theme-control
+            - var i = 1;
+            while i <= 3
+              button(class=`theme${i}`,data-theme=i++)
+      section.keypad
+      section.keys
+        .natural-numbers
+          - var n = 1;
+          while n <= 9
+            button(data-value=n) #{n++}
+        button.delete del
+        button.plus +
+        button.minus -
+        button.multiply x
+        button.reset reset
+        button.equal =
+        button.dot .
+        button.zero 0
+        button.division /
     script(src="js/main.js")
