--- a/develop/css/sass/layout/_scroll-bar.scss
+++ b/develop/css/sass/layout/_scroll-bar.scss
@@ -7,13 +7,13 @@ $scroll: "::-webkit-scrollbar";
   width: 15px;
 }
 #{$scroll}-track {
-  background-color: $main-text-color;
+  background-color: var(--main-text-color);
 }
 #{$scroll}-thumb {
   cursor: pointer;
   border-radius: $main-border-radius;
   &,
   &:hover {
-    background-color: $main-background-color;
+    background-color: var(--main-bg-color);
   }
 }
