--- a/develop/css/sass/helpers/_variables.scss
+++ b/develop/css/sass/helpers/_variables.scss
@@ -14,8 +14,8 @@ html[data-theme="1"] {
   --third-text-color: hsl(0, 0%, 100%);
   // background
   --screen-bg-color: hsl(222, 26%, 31%);
-  --main-bg-color: hsl(224, 36%, 15%);
-  --second-bg-color: hsl(223, 31%, 20%); // keypad
+  --second-bg-color: hsl(224, 36%, 15%);
+  --main-bg-color: hsl(223, 31%, 20%);
   // keys background - shadows
   --main-key-bg-color: hsl(30, 25%, 89%);
   --main-key-shadow-color: hsl(28, 16%, 65%);
