--- a/develop/index.pug
+++ b/develop/index.pug
@@ -25,19 +25,19 @@ html(dir=dir,data-theme=1)
             - var i = 1;
             while i <= 3
               button(class=`theme${i}`,data-theme=i++)
-      section.keypad
+      section.keypad 399,981
       section.keys
         .natural-numbers
           - var n = 1;
           while n <= 9
             button(data-value=n) #{n++}
-        button.delete del
+        button.delete.btn-text del
         button.plus +
         button.minus -
-        button.multiply x
-        button.reset reset
+        button.reset.btn-text reset
         button.equal =
         button.dot .
         button.zero 0
         button.division /
+        button.multiply x
     script(src="js/main.js")
