--- a/develop/css/sass/components/home-page/_keypad.scss
+++ b/develop/css/sass/components/home-page/_keypad.scss
@@ -1,6 +1,6 @@
 section.keypad {
   background-color: var(--second-bg-color);
-  color: var(--second-text-color);
+  color: var(--header-text-color);
   padding: 30px 25px;
   border-radius: $main-border-radius;
   text-align: end;
