--- a/develop/css/sass/helpers/_mixins.scss
+++ b/develop/css/sass/helpers/_mixins.scss
@@ -1,4 +1,4 @@
 @mixin keyBgWithShadow($w) {
   background-color: var(--#{$w}-key-bg-color);
-  box-shadow: inset 0 -3px 0px var(--#{$w}-key-shadow-color);
+  box-shadow: inset 0 -6px 0px -3px var(--#{$w}-key-shadow-color);
 }
