--- a/develop/css/sass/helpers/_variables.scss
+++ b/develop/css/sass/helpers/_variables.scss
@@ -10,56 +10,68 @@ $main-padding: 20px;
 html[data-theme="1"] {
   // text
   --header-text-color: hsl(0, 0%, 100%);
-  --main-key-text-color: hsl(221, 14%, 31%);
-  --second-key-text-color: hsl(0, 0%, 100%);
-  --third-key-text-color: hsl(0, 0%, 100%);
   // background
   --screen-bg-color: hsl(222, 26%, 31%);
   --main-bg-color: hsl(223, 31%, 20%);
   --second-bg-color: hsl(224, 36%, 15%);
+  // keys text
+  --main-key-text-color: hsl(221, 14%, 31%);
+  --second-key-text-color: hsl(0, 0%, 100%);
+  --third-key-text-color: hsl(0, 0%, 100%);
   // keys background - shadows
   --main-key-bg-color: hsl(30, 25%, 89%);
   --main-key-shadow-color: hsl(28, 16%, 65%);
+  --main-key-hover-color: hsl(0, 0%, 100%);
   --second-key-bg-color: hsl(225, 21%, 49%);
   --second-key-shadow-color: hsl(224, 28%, 35%);
+  --second-key-hover-color: hsl(226, 51%, 77%);
   --third-key-bg-color: hsl(6, 63%, 50%);
   --third-key-shadow-color: hsl(6, 70%, 34%);
+  --third-key-hover-color: hsl(7, 82%, 65%);
 }
 
 html[data-theme="2"] {
   // text
   --header-text-color: hsl(60, 10%, 19%);
-  --main-key-text-color: hsl(60, 10%, 19%);
-  --second-key-text-color: hsl(0, 0%, 100%);
-  --third-key-text-color: hsl(0, 0%, 100%);
   // background
   --screen-bg-color: hsl(0, 0%, 90%);
   --main-bg-color: hsl(0, 5%, 81%);
   --second-bg-color: hsl(0, 0%, 93%);
+  // keys text
+  --main-key-text-color: hsl(60, 10%, 19%);
+  --second-key-text-color: hsl(0, 0%, 100%);
+  --third-key-text-color: hsl(0, 0%, 100%);
   // keys background - shadows
   --main-key-bg-color: hsl(45, 7%, 89%);
   --main-key-shadow-color: hsl(35, 11%, 61%);
+  --main-key-hover-color: hsl(0, 0%, 100%);
   --second-key-bg-color: hsl(185, 42%, 37%);
   --second-key-shadow-color: hsl(185, 58%, 25%);
+  --second-key-hover-color: hsl(186, 37%, 59%);
   --third-key-bg-color: hsl(25, 98%, 40%);
   --third-key-shadow-color: hsl(25, 99%, 27%);
+  --third-key-hover-color: hsl(27, 91%, 59%);
 }
 
 html[data-theme="3"] {
   // text
   --header-text-color: hsl(52, 100%, 62%);
-  --main-key-text-color: hsl(52, 100%, 62%);
-  --second-key-text-color: hsl(0, 0%, 100%);
-  --third-key-text-color: hsl(198, 20%, 13%);
   // background
   --screen-bg-color: hsl(268, 75%, 9%);
   --main-bg-color: hsl(268, 71%, 12%);
   --second-bg-color: hsl(268, 71%, 12%);
+  // keys text
+  --main-key-text-color: hsl(52, 100%, 62%);
+  --second-key-text-color: hsl(0, 0%, 100%);
+  --third-key-text-color: hsl(198, 20%, 13%);
   // keys background - shadows
   --main-key-bg-color: hsl(268, 47%, 21%);
   --main-key-shadow-color: hsl(290, 70%, 36%);
+  --main-key-hover-color: hsl(266, 53%, 44%);
   --second-key-bg-color: hsl(281, 89%, 26%);
   --second-key-shadow-color: hsl(285, 91%, 52%);
+  --second-key-hover-color: hsl(277, 55%, 45%);
   --third-key-bg-color: hsl(176, 100%, 44%);
   --third-key-shadow-color: hsl(177, 92%, 70%);
+  --third-key-hover-color: hsl(176, 100%, 82%);
 }
