--- a/develop/css/sass/layout/_global-rules.scss
+++ b/develop/css/sass/layout/_global-rules.scss
@@ -31,6 +31,7 @@ optgroup {
 button {
   border: none;
   cursor: pointer;
+  transition: background-color $main-transition;
 }
 body {
   background-color: var(--screen-bg-color);
