--- a/develop/css/sass/components/home-page/_header.scss
+++ b/develop/css/sass/components/home-page/_header.scss
@@ -14,6 +14,7 @@ header {
     font-size: 12px;
     > span {
       letter-spacing: 0.5px;
+      font-size: 10px;
     }
     .theme-control {
       background-color: var(--main-bg-color);
@@ -27,13 +28,16 @@ header {
         width: 11px;
         border-radius: 50%;
         background-color: var(--third-key-bg-color);
+        &:hover {
+          background-color: var(--third-key-hover-color);
+        }
         position: relative;
         counter-increment: theme;
         &::before {
           content: counter(theme);
           position: absolute;
           left: 50%;
-          top: -5px;
+          top: -7px;
           transform: translate(-50%, -100%);
         }
       }
