--- a/develop/css/sass/helpers/_mixins.scss
+++ b/develop/css/sass/helpers/_mixins.scss
@@ -1,4 +1,8 @@
-@mixin keyBgWithShadow($w) {
+@mixin keyColors($w) {
+  color: var(--#{$w}-key-text-color);
   background-color: var(--#{$w}-key-bg-color);
-  box-shadow: inset 0 -6px 0px -3px var(--#{$w}-key-shadow-color);
+  box-shadow: inset 0 -4px 0px -1px var(--#{$w}-key-shadow-color);
+  &:hover {
+    background-color: var(--#{$w}-key-hover-color);
+  }
 }
