--- a/develop/index.pug
+++ b/develop/index.pug
@@ -31,7 +31,7 @@ html(dir=dir,data-theme=1)
           - var n = 9;
           while n >= 1
             button(data-value=n) #{n--}
-        button.delete.btn-text del
+        button.delete.btn-text
         button.plus +
         button.minus -
         button.reset.btn-text reset
