--- a/develop/css/sass/components/home-page/_keypad.scss
+++ b/develop/css/sass/components/home-page/_keypad.scss
@@ -3,7 +3,10 @@ section.keypad {
   color: var(--header-text-color);
   padding: 30px 25px;
   border-radius: $main-border-radius;
-  text-align: end;
   font-size: 40px;
   margin: 25px 0 20px;
+  text-align: end;
+  @include underLargeMobile {
+    text-align: center;
+  }
 }
