--- a/develop/index.pug
+++ b/develop/index.pug
@@ -24,7 +24,7 @@ html(dir=dir,data-theme=1)
           .theme-control
             - var i = 1;
             while i <= 3
-              button(class=`theme${i}`,data-theme=i++)
+              button(data-theme=i++)
       section.keypad 399,981
       section.keys
         .natural-numbers
