--- a/develop/css/sass/components/home-page/_header.scss
+++ b/develop/css/sass/components/home-page/_header.scss
@@ -3,6 +3,7 @@ header {
   justify-content: space-between;
   align-items: center;
   color: var(--header-text-color);
+  user-select: none;
   h1 {
     font-size: 24px;
   }
