--- a/develop/index.pug
+++ b/develop/index.pug
@@ -4,12 +4,6 @@ html(dir=dir,data-theme=1)
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(name="description", content="this is a web project")
-    link(
-      rel="icon",
-      type="image/png",
-      sizes="32x32",
-      href="../images/favicon-32x32.png"
-    )
     title Calculator App
     link(rel="stylesheet", href="css/main.css")
     link(rel="preconnect", href="https://fonts.googleapis.com")
@@ -25,19 +19,19 @@ html(dir=dir,data-theme=1)
             - var i = 1;
             while i <= 3
               button(data-theme=i++)
-      section.keypad 399,981
+      section.keypad
       section.keys
         .natural-numbers
           - var n = 9;
           while n >= 1
             button(data-value=n) #{n--}
         button.delete.btn-text
-        button.plus +
-        button.minus -
+        button.plus(data-operator='+') +
+        button.minus(data-operator='-') -
         button.reset.btn-text reset
         button.equal =
-        button.dot .
-        button.zero 0
-        button.division /
-        button.multiply x
+        button.dot(data-value='.') .
+        button.zero(data-value=0) 0
+        button.division(data-operator='/') /
+        button.multiply(data-operator='*') x
     script(src="js/main.js")
