update color in scroll bar

--- a/src/scss/DividedFiles/layout/_scroll-bar.scss
+++ b/src/scss/DividedFiles/layout/_scroll-bar.scss
@@ -14,6 +14,6 @@ $scroll: "::-webkit-scrollbar";
   border-radius: $main-border-radius;
   &,
   &:hover {
-    background-color: colors.$main-background;
+    background-color: colors.$page-background;
   }
 }
