complete themes logic and variables

--- a/src/scss/DividedFiles/helpers/variables/_colors.scss
+++ b/src/scss/DividedFiles/helpers/variables/_colors.scss
@@ -1,56 +1,54 @@
-// Theme 1
-$theme: 1;
-// - Text
-$main-text: hsl(0, 0%, 100%); // White
-// - Backgrounds
-$page-background: hsl(222, 26%, 31%); // Very dark desaturated blue
-$screen-background: hsl(224, 36%, 15%); // Very dark desaturated blue
-$keypad-background: hsl(223, 31%, 20%); // Very dark desaturated blue
-// - Keys
-$key-main-text: hsl(221, 14%, 31%); // Very dark grayish blue
-$key-main-background: hsl(30, 25%, 89%); // Light grayish orange
-$key-main-shadow: hsl(28, 16%, 65%); // Grayish orange
-$key-second-text: hsl(0, 0%, 100%); // White
-$key-second-background: hsl(225, 21%, 49%); // Desaturated dark blue
-$key-second-shadow: hsl(224, 28%, 35%); // Desaturated dark blue
-$key-third-text: hsl(0, 0%, 100%); // White
-$key-third-background: hsl(6, 63%, 50%); // Red
-$key-third-shadow: hsl(6, 70%, 34%); // Dark red
-@if ($theme == 2) {
-  // Theme 2
+html[theme="1"] {
   // - Text
-  $main-text: hsl(60, 10%, 19%); // Very dark grayish yellow
+  --main-text-color: hsl(0, 0%, 100%); // White
   // - Backgrounds
-  $page-background: hsl(0, 0%, 90%); // Light gray
-  $screen-background: hsl(0, 0%, 93%); // Very light gray
-  $keypad-background: hsl(0, 5%, 81%); // Grayish red
+  --page-background-color: hsl(222, 26%, 31%); // Very dark desaturated blue
+  --screen-background-color: hsl(224, 36%, 15%); // Very dark desaturated blue
+  --keypad-background-color: hsl(223, 31%, 20%); // Very dark desaturated blue
   // - Keys
-  $key-main-text: hsl(60, 10%, 19%); // Very dark grayish yellow
-  $key-main-background: hsl(45, 7%, 89%); // Light grayish yellow
-  $key-main-shadow: hsl(35, 11%, 61%); // Dark grayish orange
-  $key-second-text: hsl(0, 0%, 100%); // White;
-  $key-second-background: hsl(185, 42%, 37%); // Dark moderate cyan
-  $key-second-shadow: hsl(185, 58%, 25%); // Very dark cyan
-  $key-third-text: hsl(0, 0%, 100%); // White;
-  $key-third-background: hsl(25, 98%, 40%); // Orange
-  $key-third-shadow: hsl(25, 99%, 27%); // Dark orange
+  --key-main-text-color: hsl(221, 14%, 31%); // Very dark grayish blue
+  --key-main-background-color: hsl(30, 25%, 89%); // Light grayish orange
+  --key-main-shadow-color: hsl(28, 16%, 65%); // Grayish orange
+  --key-second-text-color: hsl(0, 0%, 100%); // White
+  --key-second-background-color: hsl(225, 21%, 49%); // Desaturated dark blue
+  --key-second-shadow-color: hsl(224, 28%, 35%); // Desaturated dark blue
+  --key-third-text-color: hsl(0, 0%, 100%); // White
+  --key-third-background-color: hsl(6, 63%, 50%); // Red
+  --key-third-shadow-color: hsl(6, 70%, 34%); // Dark red
 }
-@if ($theme == 3) {
-  // Theme 3
+html[theme="2"] {
   // - Text
-  $main-text: hsl(52, 100%, 62%); // Light yellow
+  --main-text-color: hsl(60, 10%, 19%); // Very dark grayish yellow
   // - Backgrounds
-  $page-background: hsl(268, 75%, 9%); // Very dark violet
-  $screen-background: hsl(268, 71%, 12%); // Very dark violet
-  $keypad-background: hsl(268, 71%, 12%); // Very dark violet
+  --page-background-color: hsl(0, 0%, 90%); // Light gray
+  --screen-background-color: hsl(0, 0%, 93%); // Very light gray
+  --keypad-background-color: hsl(0, 5%, 81%); // Grayish red
   // - Keys
-  $key-main-text: hsl(52, 100%, 62%); // Light yellow
-  $key-main-background: hsl(268, 47%, 21%); // Very dark violet
-  $key-main-shadow: hsl(290, 70%, 36%); // Dark magenta
-  $key-second-text: hsl(0, 0%, 100%); // White
-  $key-second-background: hsl(281, 89%, 26%); // Dark violet
-  $key-second-shadow: hsl(285, 91%, 52%); // Vivid magenta
-  $key-third-text: hsl(198, 20%, 13%); // Very dark blue
-  $key-third-background: hsl(176, 100%, 44%); // Pure cyan
-  $key-third-shadow: hsl(177, 92%, 70%); // Soft cyan
+  --key-main-text-color: hsl(60, 10%, 19%); // Very dark grayish yellow
+  --key-main-background-color: hsl(45, 7%, 89%); // Light grayish yellow
+  --key-main-shadow-color: hsl(35, 11%, 61%); // Dark grayish orange
+  --key-second-text-color: hsl(0, 0%, 100%); // White;
+  --key-second-background-color: hsl(185, 42%, 37%); // Dark moderate cyan
+  --key-second-shadow-color: hsl(185, 58%, 25%); // Very dark cyan
+  --key-third-text-color: hsl(0, 0%, 100%); // White;
+  --key-third-background-color: hsl(25, 98%, 40%); // Orange
+  --key-third-shadow-color: hsl(25, 99%, 27%); // Dark orange
+}
+html[theme="3"] {
+  // - Text
+  --main-text-color: hsl(52, 100%, 62%); // Light yellow
+  // - Backgrounds
+  --page-background-color: hsl(268, 75%, 9%); // Very dark violet
+  --screen-background-color: hsl(268, 71%, 12%); // Very dark violet
+  --keypad-background-color: hsl(268, 71%, 12%); // Very dark violet
+  // - Keys
+  --key-main-text-color: hsl(52, 100%, 62%); // Light yellow
+  --key-main-background-color: hsl(268, 47%, 21%); // Very dark violet
+  --key-main-shadow-color: hsl(290, 70%, 36%); // Dark magenta
+  --key-second-text-color: hsl(0, 0%, 100%); // White
+  --key-second-background-color: hsl(281, 89%, 26%); // Dark violet
+  --key-second-shadow-color: hsl(285, 91%, 52%); // Vivid magenta
+  --key-third-text-color: hsl(198, 20%, 13%); // Very dark blue
+  --key-third-background-color: hsl(176, 100%, 44%); // Pure cyan
+  --key-third-shadow-color: hsl(177, 92%, 70%); // Soft cyan
 }
