update import SCCS files

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,5 @@
+// css color variables
+@import "DividedFiles/helpers/variables/colors";
 // layout
 @import "DividedFiles/layout/global-rules";
 @import "DividedFiles/layout/scroll-bar";
